--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,8 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>                           
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
